[tool.poetry]
name = "horusgui"
version = "0.3.16"
description = ""
authors = ["Mark Jessop <vk5qi@rfhead.net>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
crcmod = "^1.7"
PyQt5 = "^5.15.0"
pyqtgraph = "^0.12.3"
pyaudio = "^0.2.11"
horusdemodlib = "^0.3.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
