[tool.poetry]
name = "horusgui"
version = "0.3.19"
description = ""
authors = ["Mark Jessop <vk5qi@rfhead.net>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
crcmod = "^1.7"
PyQt5 = "^5.15.0"
pyqtgraph = "^0.12.3"
pyaudio = "^0.2.11"
horusdemodlib = "^0.3.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[project]
authors = [
    {name = "Mark Jessop", email = "vk5qi@rfhead.net"},
]
requires-python = "<4.0,>=3.6"
dependencies = [
    "requests<3.0.0,>=2.32.0",
    "crcmod<2.0,>=1.7",
    "PyQt6<7.0.0,>=6.9.0",
    "pyqtgraph<1.0.0,>=0.13.7",
    "pyaudio<1.0.0,>=0.2.14",
    "horusdemodlib<1.0.0,>=0.3.15",
    "PyQt6",
    "audioop-lts; python_version>='3.13'",
    "crcmod",
    "horusdemodlib>=0.3.12",
    "numpy",
    "pyaudio",
    "pyqtgraph",
    "requests",
]
name = "horusgui"
version = "0.4.1"
description = "Project Horus GUI Telemetry Decdoer"
keywords = ["horus telemetry radio"]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]

[project.scripts]
horus-gui = "horusgui.gui:main"
